# AgentBrowser

./: .gitignore  README.md  demo_parallel.py  package.json  pyproject.toml
agent_browser/: __init__.py  __main__.py  _core.py  _profile.py  tools.py
agent_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
agent_browser/data/: cdp.js  cli.js
scripts/: google-smoke-test.js
src/: cdp.js  cli.js
