[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-browser"
version = "0.2.0"
description = "Thread-safe Chrome CDP controller for AI agents"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
agent-browser = "agent_browser.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_browser*"]

[tool.setuptools.package-data]
agent_browser = ["data/*.js"]
